# Archipelago

./: .codespellignore  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  2.0.0  AGENTS.md  AHITClient.py  APBingoClient.py  APWorldInfo.py  AP_05594871498841892311_P1_Player1.apeb  AP_25009708032183456296_P1_Player1.apyi  Adjuster.py  AdjusterMain.py  AdventureClient.py  AnimalWellClient.py  AshipelagoUtilities.py  AutoDolphinClient.py  BN3Test.py  BaseClasses.py  BaseRules.py  BizHawkClient.py  Bosses.py  ChecksFinderClient.py  Civ6Client.py  ColorPicker.py  CommonClient.py  CotNDClient.py  DarkSouls3Client.py  DataStorage.py  Dockerfile  DolphinClient.py  Dungeons.py  ER_hint_reference.txt  EmeraldAdjuster.py  EntranceRando.py  EntranceRandomizer.py  EntranceShuffle.py  (+197 more)
.claude/: settings.local.json
.github/: FUNDING.yml  labeler.yml  mypy_check.sh  mypy_files.txt  pull_request_template.md  pyright-config.json  type_check.py  type_check.sh
.run/: Archipelago Unittests.run.xml  Build APWorld.run.xml  Build APWorlds.run.xml  Generate.run.xml  Host.run.xml  Launcher.run.xml  ModuleUpdate.run.xml  WebHost.run.xml  _Launcher.run.xml
Names/: ItemName.py  LocationName.py  RegionName.py  __init__.py
SNI/: LICENSE  README.md  apps.yaml  sni.proto
WebHost/: __init__.py  autolauncher.py  customserver.py  landing.py  models.py  requirements.txt  run.py  tracker.py  upload.py
WebHostLib/: README.md  __init__.py  autolauncher.py  check.py  (+16 more)
test/cpp/: CMakeLists.txt  README.md
test/cpp/intset/: CMakeLists.txt  test_intset.cpp
(+16692 files in other folders)
